--- a/Lab_8_Task_4/.vscode/tasks.json
+++ b/Lab_8_Task_4/.vscode/tasks.json
@@ -2,17 +2,17 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "cppbuild",
-			"label": "C/C++: g++.exe сборка активного файла",
-			"command": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\g++.exe",
+			"type": "shell",
+			"label": "g++ build active file",
+			"command": "/usr/bin/g++",
 			"args": [
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"${fileDirname}/${fileBasenameNoExtension}"
 			],
 			"options": {
-				"cwd": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin"
+				"cwd": "/usr/bin"
 			},
 			"problemMatcher": [
 				"$gcc"
@@ -20,8 +20,7 @@
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			},
-			"detail": "компилятор: \"C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\g++.exe\""
+			}
 		}
 	]
 }
